FF-479 #comment Change to new metadata model