@@ -4,124 +4,129 @@ import no.fintlabs.model.acos.AcosFormDefinition;
 import no.fintlabs.model.acos.AcosFormElement;
 import no.fintlabs.model.acos.AcosFormGroup;
 import no.fintlabs.model.acos.AcosFormStep;
-import no.fintlabs.model.fint.InstanceElementMetadata;
-import no.fintlabs.model.fint.IntegrationMetadata;
+import no.fintlabs.model.fint.*;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 public class AcosFormDefinitionMapper {
 
     public IntegrationMetadata toIntegrationMetadata(Long sourceApplicationId, AcosFormDefinition acosFormDefinition) {
-
         return IntegrationMetadata.builder()
                 .sourceApplicationId(sourceApplicationId)
                 .sourceApplicationIntegrationId(acosFormDefinition.getMetadata().getFormId())
                 .sourceApplicationIntegrationUri(acosFormDefinition.getMetadata().getFormUri())
                 .integrationDisplayName(acosFormDefinition.getMetadata().getFormDisplayName())
                 .version(acosFormDefinition.getMetadata().getVersion())
-                .instanceElementMetadata(
-                        Stream.concat(
-                                        Stream.of(
-                                                createSkjemaPdfMetadata(),
-                                                createVedleggMetadata()
-                                        ),
+                .instanceMetadata(
+                        InstanceMetadataContent.builder()
+                                .instanceValueMetadata(List.of(createSkjemaPdfMetadata()))
+                                .instanceObjectCollectionMetadata(List.of(createVedleggMetadata()))
+                                .categories(
                                         acosFormDefinition
                                                 .getSteps()
                                                 .stream()
-                                                .map(this::toParentElementMetadata)
+                                                .map(this::toMetadataCategory)
+                                                .toList()
                                 )
-                                .toList()
+                                .build()
                 )
                 .build();
     }
 
-    private InstanceElementMetadata createSkjemaPdfMetadata() {
-        return InstanceElementMetadata
+    private InstanceValueMetadata createSkjemaPdfMetadata() {
+        return InstanceValueMetadata
                 .builder()
                 .displayName("Skjema-PDF")
                 .key("skjemaPdf")
-                .type(InstanceElementMetadata.Type.STRING)
-                .disabled(true)
+                .type(InstanceValueMetadata.Type.FILE)
                 .build();
     }
 
-    private InstanceElementMetadata createVedleggMetadata() {
-        return InstanceElementMetadata
+    private InstanceObjectCollectionMetadata createVedleggMetadata() {
+        return InstanceObjectCollectionMetadata
                 .builder()
                 .displayName("Vedlegg")
                 .key("vedlegg")
-                .disabled(true)
-                .children(List.of(
-                        InstanceElementMetadata
+                .objectMetadata(
+                        InstanceMetadataContent
                                 .builder()
-                                .displayName("Navn")
-                                .key("navn")
-                                .type(InstanceElementMetadata.Type.STRING)
-                                .disabled(true)
-                                .build(),
-                        InstanceElementMetadata
-                                .builder()
-                                .displayName("Type")
-                                .key("type")
-                                .type(InstanceElementMetadata.Type.STRING)
-                                .disabled(true)
-                                .build(),
-                        InstanceElementMetadata
-                                .builder()
-                                .displayName("Enkoding")
-                                .key("enkoding")
-                                .type(InstanceElementMetadata.Type.STRING)
-                                .disabled(true)
-                                .build(),
-                        InstanceElementMetadata
-                                .builder()
-                                .displayName("Fil")
-                                .key("fil")
-                                .type(InstanceElementMetadata.Type.STRING)
-                                .disabled(true)
+                                .instanceValueMetadata(List.of(
+                                        InstanceValueMetadata
+                                                .builder()
+                                                .displayName("Navn")
+                                                .key("navn")
+                                                .type(InstanceValueMetadata.Type.STRING)
+                                                .build(),
+                                        InstanceValueMetadata
+                                                .builder()
+                                                .displayName("Type")
+                                                .key("type")
+                                                .type(InstanceValueMetadata.Type.STRING)
+                                                .build(),
+                                        InstanceValueMetadata
+                                                .builder()
+                                                .displayName("Enkoding")
+                                                .key("enkoding")
+                                                .type(InstanceValueMetadata.Type.STRING)
+                                                .build(),
+                                        InstanceValueMetadata
+                                                .builder()
+                                                .displayName("Fil")
+                                                .key("fil")
+                                                .type(InstanceValueMetadata.Type.FILE)
+                                                .build()
+                                ))
                                 .build()
-                ))
+                )
                 .build();
     }
 
-    private InstanceElementMetadata toParentElementMetadata(AcosFormStep acosFormStep) {
-        return InstanceElementMetadata
+    private InstanceMetadataCategory toMetadataCategory(AcosFormStep acosFormStep) {
+        return InstanceMetadataCategory
                 .builder()
                 .displayName(acosFormStep.getDisplayName())
-                .children(
-                        acosFormStep
-                                .getGroups()
-                                .stream()
-                                .map(this::toParentElementMetadata)
-                                .collect(Collectors.toList())
+                .content(
+                        InstanceMetadataContent
+                                .builder()
+                                .categories(
+                                        acosFormStep
+                                                .getGroups()
+                                                .stream()
+                                                .map(this::toMetadataCategory)
+                                                .toList()
+                                )
+                                .build()
                 )
                 .build();
     }
 
-    private InstanceElementMetadata toParentElementMetadata(AcosFormGroup acosFormGroup) {
-        return InstanceElementMetadata
+    private InstanceMetadataCategory toMetadataCategory(AcosFormGroup acosFormGroup) {
+        return InstanceMetadataCategory
                 .builder()
                 .displayName(acosFormGroup.getDisplayName())
-                .children(
-                        acosFormGroup
-                                .getElements()
-                                .stream()
-                                .map(this::toTypedElementMetadata)
-                                .collect(Collectors.toList())
+                .content(
+                        InstanceMetadataContent
+                                .builder()
+                                .instanceValueMetadata(
+                                        acosFormGroup
+                                                .getElements()
+                                                .stream()
+                                                .map(this::toInstanceValueMetadata)
+                                                .toList()
+                                )
+                                .build()
                 )
                 .build();
     }
 
-    private InstanceElementMetadata toTypedElementMetadata(AcosFormElement acosFormElement) {
-        return InstanceElementMetadata
+    private InstanceValueMetadata toInstanceValueMetadata(AcosFormElement acosFormElement) {
+        return InstanceValueMetadata
                 .builder()
-                .key("skjema." + acosFormElement.getId())
-                .type(InstanceElementMetadata.Type.STRING)
                 .displayName(acosFormElement.getDisplayName())
+                .type(InstanceValueMetadata.Type.STRING)
+                .key("skjema." + acosFormElement.getId())
                 .build();
     }
 
